--- a/javascripts/discourse/components/modal/video.hbs
+++ b/javascripts/discourse/components/modal/video.hbs
@@ -3,9 +3,9 @@
         <script async defer src="https://apis.google.com/js/api.js" id="gapiScript"></script>
         <div class="video-details">
             {{input type="file" id="video-file" accept="video/mp4,video/x-m4v,video/*" }}
-            {{#if youtubeEnabled}}
+            {{#if this.youtubeEnabled}}
                 <label for=video-scope">{{theme-i18n 'details.privacy'}}</label>
-                {{#if vimeoEnabled}}<small>{{theme-i18n 'details.privacy-note'}}: <b>{{vimeoUploadScope}}</b></small>{{/if}}
+                {{#if this.vimeoEnabled}}<small>{{theme-i18n 'details.privacy-note'}}: <b>{{this.vimeoUploadScope}}</b></small>{{/if}}
                 <select id="video-scope">
                     <option value="unlisted">{{theme-i18n 'details.scope.unlisted'}}</option>
                     <option value="public">{{theme-i18n 'details.scope.public'}}</option>
@@ -17,27 +17,27 @@
         </div>
 
         <div class="video-upload-status">
-            {{#if isAuthing}}
+            {{#if this.isAuthing}}
                 {{theme-i18n 'status.authenticating'}} <div class="spinner"></div>
             {{/if}}
-            {{#if isUploading}}
+            {{#if this.isUploading}}
                 {{theme-i18n 'status.uploading'}} {{uploadProgress}}%
             {{/if}}
-            {{#if isProcessing}}
+            {{#if this.isProcessing}}
                 {{theme-i18n 'status.transcoding'}} <div class="spinner"></div>
             {{/if}}
-            {{#if processingError}}
+            {{#if this.processingError}}
                 <span style="color: red">{{theme-i18n 'status.error.transcode'}}</span>
             {{/if}}
-            {{#if uploadError}}
-                <span style="color: red">{{theme-i18n 'status.error.upload'}}: {{{uploadError}}}</span>
+            {{#if this.uploadError}}
+                <span style="color: red">{{theme-i18n 'status.error.upload'}}: {{{this.uploadError}}}</span>
             {{/if}}
         </div>
             
     </:body>
 
     <:footer>
-        {{#if vimeoEnabled}}
+        {{#if this.vimeoEnabled}}
             <DButton
                 @label={{theme-prefix 'upload.vimeo'}}
                 @action={{action "vimeoUpload"}}
@@ -45,7 +45,7 @@
                 @id="vimeo-upload-btn"
             />
         {{/if}}
-        {{#if youtubeEnabled}}
+        {{#if this.youtubeEnabled}}
         <DButton
             @label={{theme-prefix 'upload.youtube'}}
             @action={{action "youtubeUpload"}}
