--- a/javascripts/discourse/components/modal/video.hbs
+++ b/javascripts/discourse/components/modal/video.hbs
@@ -56,7 +56,7 @@
     <:footer>
         {{#if this.vimeoEnabled}}
             <DButton
-                @label={{theme-i18n 'upload.vimeo'}}
+                @label={{theme-prefix 'upload.vimeo'}}
                 @action={{this.vimeoUpload}}
                 @icon="fab-vimeo-v"
                 @id="vimeo-upload-btn"
