--- a/javascripts/discourse/components/modal/video.hbs
+++ b/javascripts/discourse/components/modal/video.hbs
@@ -56,7 +56,7 @@
     <:footer>
         {{#if this.vimeoEnabled}}
             <DButton
-                @label={{'upload.vimeo'}}
+                @label={{theme-prefix 'upload.vimeo'}}
                 @action={{this.vimeoUpload}}
                 @icon="fab-vimeo-v"
                 @id="vimeo-upload-btn"
@@ -64,7 +64,7 @@
         {{/if}}
         {{#if this.youtubeEnabled}}
         <DButton
-            @label={{'upload.youtube'}}
+            @label={{theme-prefix 'upload.youtube'}}
             @action={{this.youtubeUpload}}
             @icon="fab-youtube"
             @id="youtube-upload-btn"
