--- a/javascripts/discourse/components/modal/video.hbs
+++ b/javascripts/discourse/components/modal/video.hbs
@@ -29,7 +29,7 @@
                 @type="text"
                 name="video-description"
                 id="video-description"
-                placeholder="{{this.currentUser}}"
+                placeholder="{{this.attrs.username}}"
             />
         </div>
 
