--- a/javascripts/discourse/components/modal/video.hbs
+++ b/javascripts/discourse/components/modal/video.hbs
@@ -22,14 +22,14 @@
                 @type="text"
                 name="video-title"
                 id="video-title"
-                placeholder="Video Title"
+                placeholder="Название видео"
             />
             <label for="video-scope">{{theme-i18n 'details.description'}}</label>
             <Input
                 @type="text"
                 name="video-description"
                 id="video-description"
-                placeholder="{{this.attrs.username}}"
+                placeholder="Описание видео"
             />
         </div>
 
