--- a/javascripts/discourse/components/modal/video.hbs
+++ b/javascripts/discourse/components/modal/video.hbs
@@ -70,5 +70,6 @@
             @id="youtube-upload-btn"
         />
         {{/if}}
+        <label>Вы так же можете загрузить видео на YouTube и опубликовать ссылку - она превратиться в видео-блок</label>
     </:footer>
 </DModal>
